# WOWFontsHappy

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json  server.js  字体好开心(双击运行).bat  字体好开心管理员(右键管理员运行).bat
.github/scripts/: build_full.py  build_mini.py
.github/workflows/: build.yml
public/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
