[package]
name = "wowfontshappy"
version = "1.0.0"
description = "WoWFontsHappy desktop client"
authors = ["WoWFontsHappy"]
edition = "2021"

[lib]
name = "wowfontshappy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
base64 = "0.22"
regex = "1"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
